# qxframeless

./: CMakeLists.txt  README.md  common.pri  qxframeless.pro
demos/: CMakeLists.txt  demos.pro
demos/framelesshelper/: CMakeLists.txt  framelesshelper.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingform.h
src/: CMakeLists.txt  framelesshelper.cpp  framelesshelper.h  framelesshelper_p.h  qxframeless-lib.pri  qxframeless_global.h  src.pro
